Bug 187353 - Windows are not brought to front on win32 on notifications
Summary: Windows are not brought to front on win32 on notifications
Status: RESOLVED FIXED
Alias: None
Product: kde
Classification: I don't know
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KDE-Windows
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-17 01:07 UTC by George Yohng
Modified: 2009-03-31 21:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description George Yohng 2009-03-17 01:07:33 UTC
Version:           0.70.0 (using 4.2.1 (KDE 4.2.1), MS Visual Studio 2005 SP1)
Compiler:          cl.exe
OS:                Microsoft Windows (unknown) release 6.1

When a notification message from Kopete is happening, pressing 'View' does not bring the chat window to front. It appears behind other opened windows.

One needs to click a taskbar to bring the window up.

This is not specific to Kopete, but also works the same with other applications. Such as when Konqueror or other KDE applications are started from within other KDE application, the window of this new application appears behind the existing ones.

All-in-all, it seems that KDE application lacks the ability to bring the window to front on Windows.
Comment 1 Christian Ehrlicher 2009-03-31 20:57:22 UTC
SVN commit 947551 by chehrlic:

Use BringWindowToTop() to force an activation of a window on win32

BUG: 187353

 M  +1 -1      kwindowsystem_win.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=947551
Comment 2 Christian Ehrlicher 2009-03-31 21:03:57 UTC
SVN commit 947556 by chehrlic:

Use BringWindowToTop() to force an activation of a window on win32 - backport r947551 from trunk

CCBUG: 187353

 M  +1 -1      kwindowsystem_win.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=947556