Use BringWindowToTop() to force an activation of a window on win32

BUG: 187353

svn path=/trunk/KDE/kdelibs/; revision=947551